--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "bcrypt": "^5.1.1",
     "cloudinary": "^1.40.0",
+    "express": "^4.18.2",
     "graphql": "^16.8.0",
     "graphql-request": "^6.1.0",
     "jsonwebtoken": "^9.0.2",
-    "next": "13.4.19",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.1.1",
+    "next": "^14.1.0",
     "next-auth": "^4.23.1",
     "postcss": "8.4.29",
     "react": "18.2.0",
